# PublicCUniCourse

./: CMakeLists.txt  README.md  main.c
Test/: CMakeLists.txt
Test/libs/data_structures/: CMakeLists.txt
Test/libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vector_test/: vector_test.c  vector_test.h
libs/data_structures/vector_void/: vector_void.c  vector_void.h
